@@ -98,7 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -110,10 +110,25 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${mavenArgs}</argLine>
-                    <forkCount>0</forkCount>
                     <argLine>
-                        --add-exports javafx.graphics=ALL-UNNAMED
+                        ${mavenArgs}
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.binding=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-reads com.mulgish.mutinyfx=org.reactivestreams
                     </argLine>
                     <systemPropertyVariables>
                         <!--suppress UnresolvedMavenProperty -->
